fixed dropdown z-index

--- a/client/src/components/DropDown/style.module.css
+++ b/client/src/components/DropDown/style.module.css
@@ -42,6 +42,7 @@
   background-color: #252532;
   box-shadow: 0px 1px 1px #000000;
   border-radius: 4px;
+  z-index: 2;
 }
 
 .dropdown.active .menu {
